crates/vexor-compiler/tests/golden/error/output/unknown_operator.err
parse error at line 2, column 12
  |
2 | val x = 10 ^ 3
  |            ^
invalid character